# pretty_logger

./: LICENSE  README.md  setup.cfg
src/: __init__.py  colors.py
src/pretty_logger/: __init__.py  constants.py  decorators.py  file_logger.py
