[metadata]
name = pretty-logger
version = 1.0.0
author = Kayer
author_email = devkayer@gmail.com
description = A pretty and colorful logger to emulate nest.js's logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PilotKayer/pretty_logger
project_urls =
    Docs = https://github.com/PilotKayer/pretty_logger/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src